force-app/main/default/objects/NEO_WorkExperience__c/NEO_WorkExperience__c.object-meta.xml
<CustomObject>
    <description>Gives the detial of employee work history beginning with the current employer to the oldest employer.</description>
    <label>WorkExperience</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WorkExperiences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>