force-app/main/default/objects/NEO_WorkExperience__c/fields/NEO_designationWhenLeaving__c.field-meta.xml
<CustomField>
    <fullName>designationWhenLeaving__c</fullName>
    <label>designationWhenLeaving</label>
    <length>100</length>
    <type>Text</type>
</CustomField>