force-app/main/default/objects/NEO_WorkExperience__c/fields/NEO_duration__c.field-meta.xml
<CustomField>
    <fullName>duration__c</fullName>
    <label>duration</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>