force-app/main/default/objects/NEO_WorkExperience__c/fields/NEO_from__c.field-meta.xml
<CustomField>
    <fullName>from__c</fullName>
    <label>from</label>
    <length>100</length>
    <type>Text</type>
</CustomField>