force-app/main/default/objects/NEO_WorkExperience__c/fields/NEO_organizationName__c.field-meta.xml
<CustomField>
    <fullName>organizationName__c</fullName>
    <label>organizationName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>