force-app/main/default/objects/NEO_WorkExperience__c/fields/NEO_reasonForLeaving__c.field-meta.xml
<CustomField>
    <fullName>reasonForLeaving__c</fullName>
    <label>reasonForLeaving</label>
    <type>TextArea</type>
</CustomField>