force-app/main/default/objects/NEO_WorkExperience__c/fields/NEO_to__c.field-meta.xml
<CustomField>
    <fullName>to__c</fullName>
    <label>to</label>
    <length>100</length>
    <type>Text</type>
</CustomField>