force-app/main/default/objects/NEO_WorkExperience__c/fields/NEO_WeToEmp__c.field-meta.xml
<CustomField>
    <fullName>WeToEmp__c</fullName>
    <label>WeToEmp</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>WorkExperiences</relationshipLabel>
    <relationshipName>WorkExperiences</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>